// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

<p
  class="c0"
>
  Hello world
</p>
`;

exports[`composition hook should return with box props 1`] = `
Object {
  "style": Object {},
  "use": Object {
    "$$typeof": Symbol(react.forward_ref),
    "attrs": Array [],
    "compare": null,
    "componentStyle": ComponentStyle {
      "componentId": "sc-bdVaJa",
      "isStatic": false,
      "lastClassName": "lhjVGL",
      "rules": Array [
        "
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;

  &:focus:not(:focus-visible) {
    outline: none;
  }

  & {
    ",
        [Function],
        ";
  }
",
      ],
    },
    "displayName": "Styled(Component)",
    "foldedComponentIds": Array [],
    "render": [Function],
    "styledComponentId": "sc-bdVaJa",
    "target": Object {
      "$$typeof": Symbol(react.memo),
      "compare": null,
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      },
    },
    "toString": [Function],
    "warnTooManyClasses": [Function],
    "withComponent": [Function],
  },
}
`;

exports[`composition render props should render correctly 1`] = `
<p
  use=".sc-bdVaJa"
>
  Hello world
</p>
`;

exports[`props should render correctly 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="c0"
  use=".sc-bdVaJa"
/>
`;

exports[`props should render correctly with CSS props 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="c0"
  style="background-color: red; color: white;"
  use=".sc-bdVaJa"
/>
`;

exports[`props should render correctly with a color CSS prop 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="c0"
  style="background-color: rgb(217, 217, 217); color: rgb(68, 75, 201);"
  use=".sc-bdVaJa"
/>
`;

exports[`props should render correctly with a font size CSS prop 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="c0"
  style="font-size: 1.5rem;"
  use=".sc-bdVaJa"
/>
`;

exports[`props should render correctly with a font weight CSS prop 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="c0"
  style="font-weight: 600;"
  use=".sc-bdVaJa"
/>
`;

exports[`props should render correctly with a spacing CSS prop 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="c0"
  style="margin: 2rem; padding-left: 1rem;"
  use=".sc-bdVaJa"
/>
`;

exports[`props should render correctly with overrides 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  background-color: red;
}

<div
  class="c0"
  overrides="[object Object]"
  use=".sc-bdVaJa"
/>
`;

exports[`theming Box.base should render correctly 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  background-color: red;
}

<div
  class="c0"
  use=".sc-bdVaJa"
>
  hello world
</div>
`;
